--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <h1>Registration Form</h1>
+    <h2>Registration Form</h2>
 
     <form>
       <div>
         <label for="name">Name </label><br>
-        <input  type="text" id="name"  placeholder="Enter your Fullname"  name="name" />
+        <input  type="text" id="name"  placeholder="Enter your Fullname"  name="name" size="50" />
       </div>
       <br />
       <div>
         <label for="name">Username </label><br>
-        <input type="text" id="username" name="username" />
+        <input type="text" id="username" name="username" placeholder="Username" size="50"/>
       </div>
       <br />
       <div>
@@ -27,7 +27,7 @@
       <br />
       <div>
         <label for="email">Email</label><br>
-        <input type="email" id="email" name="email" />
+        <input type="email" id="email" name="email" placeholder="Email" size="50"/>
       </div>
       <br />
       <div>
@@ -48,18 +48,19 @@
       <br />
       <div>
         <label for="password">Password</label><br>
-        <input type="password" id="password" name="password" />
+        <input type="password" id="password" name="password"  placeholder="Enter password" size="50"/>
       </div>
       <br />
-      <div>
-        <label for="submit"> Click to Submit</label><br>
-        <button>Submit Form</button>
-      </div>
-      <br />
+     
       <div>
         <label for="tcondition">
           <input type="checkbox" id="tcondition" name="tcondition" />Terms and Condition
         </label>
+      </div>
+      <div>
+        
+        <br><button size="50">Submit Form</button><br>
+
       </div>
     </form>
   </body>
